tests/parser/extra_tokens.expected
<string>:2:11: error: expected Semicolon, not RParen
    4 + 5 )
          ^